<resources>
    <string name="app_name">Synapse</string>
    <string name="shortcut_scan_short">Scan QR</string>
    <string name="shortcut_scan_long">Scan Device QR Code</string>
    <string name="shortcut_start_short">Force Start</string>
    <string name="shortcut_start_long">Force Start Daemon</string>
    <string name="shortcut_pause_short">Pause Sync</string>
    <string name="shortcut_pause_long">Pause File Syncing</string>
</resources>